--- a/index.html
+++ b/index.html
@@ -1,26 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css"> 
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="index.css" />
+  <title>pro-1</title>
 </head>
 <body>
-    <div id="root">
+    <div class="body-container">
+        <div class="Blue Box"></div>
+        <div class="Red Box"></div>
+        <div class="Green Box"></div>
+        <div class="Orange Box"></div>
     </div>
-    <div id="hoop"></div>
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script src="project1.js"></script>
-    <!--<script>
-        const heading= React.createElement("h1",{id: "heading"},"hello world from React");
-        const divs= ReactDOM.createRoot(document.getElementById("root"));
-        divs.render(heading);
-        const anotherHeading= React.createElement("p","{id:middle}","hii i am starting my react");
-        const div=ReactDOM.createRoot(document.getElementById("hoop"));
-        div.render(anotherHeading)
-    </script>-->
-</body>
+    
 
+</body>
 </html>
